# vulndjangoapp

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  code-quality.yml  tests.yml
config/: settings.py  urls.py
scripts/: auto_merge.py
vulnapp/: __init__.py  tests.py  urls.py  views.py
vulnapp/templates/vulnapp/: comments.html  index.html  login.html
vulndjangoapp/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
webapp/: models.py  tests.py  urls.py  utils.py  views.py
webapp/migrations/: 0001_initial.py
webapp/templates/webapp/: index.html  search.html
