[project]
name = "vulndjangoapp"
version = "0.1.0"
description = "Django application with known vulnerabilities for security testing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django==3.2.0",
    "pillow==10.3.0",
    "pyyaml==5.3.1",
    "requests==2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "webapp"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
